# Multi-Agent-based-Search-and-Rescue-system-in-ROS

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.sh  ros_requirements.bash
docs/: Doxyfile
docs/docs/: Doxyfile
docs/docs/html/: _detector_8cpp.html  _detector_8cpp__incl.map  _detector_8hpp.html  _detector_8hpp__dep__incl.map  _detector_8hpp_source.html  _finder_bot_8cpp.html  _finder_bot_8hpp.html  _finder_bot_8hpp__dep__incl.map  _finder_bot_8hpp__dep__incl.md5  _finder_bot_8hpp__incl.map  _finder_bot_8hpp__incl.md5  _finder_bot_8hpp_source.html  _navigation_8cpp.html  _navigation_8cpp__incl.map  _navigation_8hpp.html  _navigation_8hpp__dep__incl.map  _navigation_8hpp__dep__incl.md5  _navigation_8hpp__incl.md5  _navigation_8hpp_source.html  _pose_8hpp.html  _pose_8hpp__dep__incl.map  _pose_8hpp_source.html  _rescue_point_8hpp.html  _rescue_point_8hpp__incl.md5  _rescue_point_8hpp_source.html  annotated.html  class_finder_bot-members.html  class_finder_bot.html  class_finder_bot.js  class_navigation-members.html  class_navigation.html  classacme_1_1_detector-members.html  classacme_1_1_detector.html  classes.html  dir_000003_000000.html  dir_000004_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  (+26 more)
docs/docs/html/search/: all_2.js  all_4.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  files_3.js  files_4.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
docs/html/: _detector_8cpp.html  _detector_8cpp__incl.md5  _detector_8hpp.html  _detector_8hpp__dep__incl.md5  _detector_8hpp__incl.map  _detector_8hpp__incl.md5  _detector_8hpp_source.html  _finder_bot_8cpp.html  _finder_bot_8cpp__incl.map  _finder_bot_8cpp__incl.md5  _finder_bot_8hpp.html  _finder_bot_8hpp_source.html  _navigation_8cpp.html  _navigation_8cpp__incl.md5  _navigation_8hpp.html  _navigation_8hpp__incl.map  _navigation_8hpp_source.html  _pose_8hpp.html  _pose_8hpp__dep__incl.md5  _pose_8hpp_source.html  _rescue_point_8hpp.html  _rescue_point_8hpp__dep__incl.map  _rescue_point_8hpp__dep__incl.md5  _rescue_point_8hpp__incl.map  _rescue_point_8hpp_source.html  annotated.html  annotated_dup.js  class_finder_bot-members.html  class_finder_bot.html  class_navigation-members.html  class_navigation.html  class_navigation.js  classacme_1_1_detector-members.html  classacme_1_1_detector.html  classacme_1_1_detector.js  classes.html  dir_000003_000000.html  dir_000004_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  (+30 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_5.js  functions_0.js  pages_0.js
include/project_finder/: Detector.hpp  FinderBot.hpp  Navigation.hpp  Pose.hpp  RescuePoint.hpp
launch/: amcl.launch  finder.launch  finder_navigation.launch  gazebo.launch  individual_robot.launch  main.launch  move_base.launch
maps/: my_office.pgm  my_office.yaml  waypoint.txt
param/: base_local_planner_params.yaml  costmap_common_params_robot1.yaml  costmap_common_params_robot10.yaml  costmap_common_params_robot11.yaml  costmap_common_params_robot12.yaml  costmap_common_params_robot13.yaml  costmap_common_params_robot14.yaml  costmap_common_params_robot15.yaml  costmap_common_params_robot16.yaml  costmap_common_params_robot17.yaml  costmap_common_params_robot18.yaml  costmap_common_params_robot19.yaml  costmap_common_params_robot2.yaml  costmap_common_params_robot20.yaml  costmap_common_params_robot3.yaml  costmap_common_params_robot4.yaml  costmap_common_params_robot5.yaml  costmap_common_params_robot6.yaml  costmap_common_params_robot7.yaml  costmap_common_params_robot8.yaml  costmap_common_params_robot9.yaml  dwa_local_planner_params.yaml  global_costmap_params_robot1.yaml  global_costmap_params_robot10.yaml  global_costmap_params_robot11.yaml  global_costmap_params_robot12.yaml  global_costmap_params_robot13.yaml  global_costmap_params_robot14.yaml  global_costmap_params_robot15.yaml  global_costmap_params_robot16.yaml  global_costmap_params_robot17.yaml  global_costmap_params_robot18.yaml  global_costmap_params_robot19.yaml  global_costmap_params_robot2.yaml  global_costmap_params_robot20.yaml  global_costmap_params_robot3.yaml  global_costmap_params_robot4.yaml  global_costmap_params_robot5.yaml  global_costmap_params_robot6.yaml  global_costmap_params_robot7.yaml  (+22 more)
results/: cppcheck.txt  cpplint.txt
rviz/: navigation.rviz
src/: Detector.cpp  FinderBot.cpp  Navigation.cpp  main.cpp
test/: finder_test.cpp  finder_test.test
worlds/: empty_office.world  my_office.world
